# dis_cyril_speech-to-text

./: .gitignore  Readme.md  embedding.py  intent.py  intention_list.py  main.py  phrase.py  pyproject.toml  recognise.py  record_voice.py  requirements.txt  test_interactive.py  train.py  transcribe.py  transcribe_wav2vec.py  tts.py  tts_ttsx3.py
