[tool.poetry]
name = "dis-cyril-speech-to-text"
version = "0.1.0"
description = ""
authors = ["Nils Ponsard <nilsponsard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-whisper = "^20231117"
transformers = "^4.37.2"
torch = "^2.2.0"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
pydub = "^0.25.1"
torchaudio = "^2.2.0"
sentencepiece = "^0.2.0"
pyaudio = "^0.2.14"
webrtcvad = "^2.0.10"
gtts = "^2.5.1"
requests = "^2.32.2"
setuptools = "^70.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
